add PublishCollection
