# internal/handler/handler.go
@@ -372,6 +372,167 @@ func (h *Handler) GetCollectionPhotos(c *gin.Context) {
 	})
 }
 
+// PublishCollection godoc
+// @Summary      Публикация коллекции
+// @Description  Публикует коллекцию по ID
+// @Tags         Collection
+// @Accept       json
+// @Produce      json
+// @Param        id path string true "ID коллекции"
+// @Success      200 {object} model.PublishCollectionResponse
+// @Failure      404 {object} model.ErrorMessage
+// @Failure      400 {object} model.ErrorMessage
+// @Router       /collection/{id}/publish [put]
+func (h *Handler) PublishCollection(c *gin.Context) {
+	// Получаем параметры из контекста и URL
+	userIDStr := c.GetString("user_id")
+	userID, err := uuid.Parse(userIDStr)
+	if err != nil {
+		log.Printf("Invalid user ID: %v\n", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+		return
+	}
+	collectionIDStr := c.Param("id")
+	collectionID, err := uuid.Parse(collectionIDStr)
+	if err != nil {
+		log.Printf("Invalid collection ID: %v\n", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid collection ID"})
+		return
+	}
+
+	// Получаем публичную ссылку на коллекцию
+	link, err := h.collectionService.PublishCollection(c.Request.Context(), userID, collectionID)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "Collection not found"})
+		} else {
+			log.Printf("Failed to publish collection: %v\n", err)
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to publish collection"})
+		}
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"link": link})
+}
+
+// RedirectToPublicCollection godoc
+// @Summary      Перенаправление на публичную коллекцию
+// @Description  Перенаправляет на публичную коллекцию по токену
+// @Tags         Collection
+// @Accept       json
+// @Produce      json
+// @Param        token path string true "Токен короткой ссылки"
+// @Success      302
+// @Failure      404 {object} model.ErrorMessage
+// @Router       /s/{token} [get]
+func (h *Handler) RedirectToPublicCollection(c *gin.Context) {
+	token := c.Param("token")
+	link, err := h.collectionService.GetPublicCollectionLink(c.Request.Context(), token)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "The link is not valid"})
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get public collection"})
+		}
+		return
+	}
+	c.Redirect(http.StatusFound, link)
+}
+
+// GetPublicCollectionPhotos godoc
+// @Summary      Получить фотографии публичной коллекции
+// @Description  Возвращает список фотографий в коллекции с возможностью сортировки.
+// @Tags         Collection
+// @Accept       json
+// @Produce      json
+// @Param        id   path   string true  "ID коллекции"
+// @Param        sort query  string false "Сортировка. Возможные значения: uploaded_new (по дате загрузки, новые сверху), uploaded_old (по дате загрузки, старые сверху), name_az (по имени файла, A-Z), name_za (по имени файла, Z-A), random (случайный порядок). По умолчанию: uploaded_new"
+// @Success      200  {object} model.CollectionPhotosResponse
+// @Failure      404  {object} model.ErrorMessage
+// @Router       /public/collection/{token}/photos [get]
+func (h *Handler) GetPublicCollectionPhotos(c *gin.Context) {
+	// Получаем параметры из контекста и URL
+	token := c.Param("token")
+	sortParam := c.Query("sort")
+
+	photos, sort, err := h.collectionService.GetPublicCollectionPhotos(c.Request.Context(), token, sortParam)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "Collection not found"})
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get collection photos"})
+		}
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"files": photos,
+		"sort":  sort,
+	})
+}
+
+// UnpublishCollection godoc
+// @Summary      Снятие публикации коллекции
+// @Description  Снимает публикацию коллекции по ID
+// @Tags         Collection
+// @Accept       json
+// @Produce      json
+// @Param        id path string true "ID коллекции"
+// @Success      200 {object} model.BooleanResponse
+// @Failure      404 {object} model.ErrorMessage
+// @Failure      400 {object} model.ErrorMessage
+// @Router       /collection/{id}/unpublish [put]
+func (h *Handler) UnpublishCollection(c *gin.Context) {
+	// Получаем параметры из контекста и URL
+	userIDStr := c.GetString("user_id")
+	userID, err := uuid.Parse(userIDStr)
+	if err != nil {
+		log.Printf("Invalid user ID: %v\n", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+		return
+	}
+	collectionIDStr := c.Param("id")
+	collectionID, err := uuid.Parse(collectionIDStr)
+	if err != nil {
+		log.Printf("Invalid collection ID: %v\n", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid collection ID"})
+		return
+	}
+
+	err = h.collectionService.UnpublishCollection(c.Request.Context(), userID, collectionID)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "Collection is not published or does not exist"})
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to unpublish collection"})
+		}
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"success": true})
+}
+
+// GetShortLinkInfo godoc
+// @Summary      Получить информацию о короткой ссылке
+// @Description  Возвращает информацию о короткой ссылке по токену
+// @Tags         Collection
+// @Accept       json
+// @Produce      json
+// @Param        token path string true "Токен короткой ссылки"
+// @Success      200 {object} object{short_link_info=model.ShortLinkInfoResponse}
+// @Failure      404 {object} model.ErrorMessage
+// @Failure      400 {object} model.ErrorMessage
+// @Router       /collection/short_link_info/{token} [get]
+func (h *Handler) GetShortLinkInfo(c *gin.Context) {
+	token := c.Param("token")
+	shortLink, err := h.collectionService.GetShortLinkInfo(c.Request.Context(), token)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get short link info"})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"short_link_info": shortLink})
+}
+
 // DeletePhoto godoc
 // @Summary      Удалить фотографию
 // @Description  Удаляет фотографию из коллекции по ID
